--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,6 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 ProjectSettings/Packages/com.unity.testtools.codecoverage/Settings.json
+
+Assets/Western/
+Assets/MyxerMan/
